# nstk

./: README.md
mex/: CMakeLists.txt  makeMex.sh  makeMex_linux.sh  makeMex_mac_osx.sh  mexFunction.def
mex/include/: mex.h  mexExport.h
mex/mxUtil/: CMakeLists.txt  GetNearestPoint_VTK_dllcreate.cpp  LabelPVs_Seg_gmm_Global_dllcreate.cpp  mexRead_vtkPolyData.cpp  mexWrite_vtkPolyData.cpp  mexWrite_vtkPolyDataWithVectors.cpp  transformIRTK.cpp
scripts/DITCH_MAYBE/: Perform_Kmeans.m  SingleImage_Segmentation_4classes_forWholeDir.m  kmeans4_singleImage.m.OLD  kmeans5_singleImage.m  kmeans5_singleImage.m.OLD
scripts/LSToolbox/Examples/: addPathToKernel.m
scripts/LSToolbox/Examples/Basic/: maskDemo.m
scripts/LSToolbox/Examples/OsherFedkiw/: normalStarDemo.m
scripts/LSToolbox/Kernel/Helper/Visualization/: visualizeLevelSet.m
scripts/LSToolbox/Kernel/SpatialDerivative/Other/: GaussCurvature3D.asv  GaussCurvature3D.m
scripts/cortexProcessing/: After_gmmem_step_4classes.m  After_gmmem_step_5classes.m  ChangePrior_WM2CSF.m  Cortex_Reconstruction_WholePipeline_AllRun.m  CreateApproximated_SDF.m  GM_Enhancement_Cruise.m  GetLabelPVs_Image.m  GetPVs_RectifyNonBrain.m  GetPVs_WM2CSF.m  GetPostImage_4classes.m  GetPostImage_5classes.m  GetPostImage_Real_4classes.m  GetPostImage_Real_5classes.m  InterSubject_CortexRegistration.m  InternalSurfaces_NoTopologyPreserving.m  LabelPVs_Seg_gmm_4classes_MEX.m  LabelPVs_Seg_gmm_5classes_MEX.m  LabelPVs_Seg_slow_fillLabeledSeg.m  LabelPVs_WM2CSF.m  Prepare_Cortex_Reconstruction.m  Prepare_membershipFunction.m  Reconstruction_External_GM_Enhanced_TH.m  Rectify_NonBrainNoise.m  RegionVolumeFilter_cortex.m  SingleSubject_CorticalRegistration.m  Statistical_AutoFill.m  bwLabel_cardinality3D.m  checkTopology.m  computeThicknessSpeed.m  createApproximated_SDF.m  findHighProb.m  geodesicNeighborhood3D.m  getDistanceBasedMapSubcortical.m  getNeighborStar.m  getShockPoints.m  intersect_topology.m  intersect_topology_onlyInd.m  levelSet_External_InternalSurface.m  levelSet_External_InternalSurface_TP_MinTH.m  levelSet_GM_Enhancement.m  (+8 more)
scripts/main/: AllinOne_Reconstruction.m  AllinOne_ResetAll.m  CreatePrefix.m  CreateTemplates_4classes_Gaussian.m  CreateTemplates_5classes_Gaussian.m  GetClassLabel_4classes.m  GetClassLabel_5classes.m  GetNeighbourhood2.m  Global_Kmeans_EM_4classes_PVs.m  Global_Kmeans_EM_5classes_PVs.m  WholeDir_Segmentation.m  WholeDir_Segmentation_withPriors.m  addExtraWidth.m  copyFiles_cortexReconstruction.m  copyKmeansInitializationFile.m  createDirStructure.m  createDirStructureSingle.m  filter_path.m  findAllDirectory.m  findBestDof.m  gaussianFilter.m  getBoundingBox_BinaryVolume.m  getLDLibPathString.m  getNeighbourhood.m  getNeighbourhood2_6neighbors.m  getROI.m  kmean_init.m  loadAnalyze.m  loadAnalyzeHeader.m  pointInROI.m  preProcPriors_4.m  preProcPriors_5.m  preSegmentation.m  readKmeanCentres.m  runAllRegistrations.m  runAllTransformations.m  runEM_4_withPriors.m  runEM_5_withPriors.m  runMaskingAndCopying.m  runResample.m  (+10 more)
scripts/netlab/: gmmem_MRF_image_uint8_4classes_PVs.m  gmmem_MRF_image_uint8_4classes_PVs_Local.m  gmmem_MRF_image_uint8_4classes_PVs_WM2CSF.m  gmmem_MRF_image_uint8_5classes_PVs.m  gmmem_MRF_image_uint8_5classes_PVs_Local.m  gmmem_MRF_image_uint8_5classes_PVs_WM2CSF.m  gmmem_image.m  gmmem_image_3classes_PVs_Local.m  gmmem_image_PVs.m  gmmem_image_PVs_Local.m  gmmem_image_PVs_WM2CSF.m  gmmem_image_PVs_WM2CSF_AverageStrategy.m  gmmem_image_PVs_WM2CSF_NonPrior.m  gmminit_3classes_image.m  gmminit_4classes_image.asv  gmminit_4classes_image.m  gmminit_4classes_image_NonPrior.m  gmminit_5classes_image.asv  gmminit_5classes_image.m  plotGMMMIX_1D.asv  plotGMMMIX_1D.m  plotGMMMIX_Parzon_1D.asv  plotGMMMIX_Parzon_1D.m
scripts/nifti/: save_nii.m
scripts/old/: AllinOne_Segmentation.m  SingleImage_Segmentation_5classes_forWholeDir.m  kmeans4_singleImage.m
scripts/toolbox_LS/Examples/Basic/: convectionDemo.m  convectionDemo_TopologyPreserving.m  laxFriedrichsDemo.m  reinitDemo.m
scripts/toolbox_LS/Examples/OsherFedkiw/: curvatureStarDemo.m  spinStarDemo.m
